fixing match history section spacing

--- a/capstone-project/ui/src/components/ProfilePage/ProfilePage.css
+++ b/capstone-project/ui/src/components/ProfilePage/ProfilePage.css
@@ -1,3 +1,8 @@
+ul.match-history{
+    padding:0;
+    margin:0;
+}
+
 .profile-page {
     height: 100vh;
     width: 100%;
@@ -201,7 +206,9 @@ background-color: lightgrey;
     display:flex;
     flex-direction: column;
     justify-content: center;
-    width:34%;
+    width: 34%;
+    margin:0;
+
 }
     
 
@@ -217,7 +224,9 @@ display:flex;
 justify-content: space-around;
 flex-direction: column;
 list-style: none;
-width:80%;
+width: 30vw;
+padding: 0;
+margin: 0;
 justify-items: center;
 background: lightgrey;
 border: 1px solid #4846BD;
@@ -249,7 +258,7 @@ border: 1px solid #4846BD;
     height: 8vh;
 background-color:white;
 padding: 2vh 3vw;
-font-size: 3vh;
+font-size: auto;
 cursor: pointer;
 font-weight: 500;
 }
@@ -350,8 +359,8 @@ font-weight: 500;
         width:80%;
     }
 
-    .profile-page .right-section .match-history ul li span{
-    font-size: 3vw;
-    }
+    .profile-page .right-section .match-history ul li span {
+        font-size: auto;
 }
 
+}
